--- a/lib/guitar_notes_web/live/guitar_live.html.heex
+++ b/lib/guitar_notes_web/live/guitar_live.html.heex
@@ -3,3 +3,5 @@
     <.live_component module={StringComponent} id={config.id} note={config.note} chord_notes={@chord_notes}/>
   <% end %>
 </div>
+
+<.live_component module={ChordSelectorComponent} id="chord-selector"/>
