--- a/lib/guitar_notes_web/templates/layout/root.html.heex
+++ b/lib/guitar_notes_web/templates/layout/root.html.heex
@@ -8,6 +8,7 @@
     <%= live_title_tag assigns[:page_title] || "GuitarNotes" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
   </head>
   <body>
     <%= @inner_content %>
