--- a/assets/css/chords.css
+++ b/assets/css/chords.css
@@ -4,4 +4,6 @@
 
 .chord-selector {
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    margin: 20px;
 }
+
