--- a/lib/guitar_notes_web/live/guitar_live.html.heex
+++ b/lib/guitar_notes_web/live/guitar_live.html.heex
@@ -4,4 +4,4 @@
   <% end %>
 </div>
 
-<.live_component module={ChordSelectorComponent} id="chord-selector" chords={@chords}/>
+<.live_component module={ChordSelectorComponent} id="chord-selector" chords={@chords} chords_order={@chords_order}/>
